--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,10 +10,12 @@
   -webkit-text-size-adjust: 100%; /* Для Safari */
   text-size-adjust: 100%;
 
---color-white: rgba(255, 255, 255, 1);
---color-grey: rgba(191, 190, 190, 1);
---color-darkblack: rgba(5, 5, 5, 1);
---color-lightblack: rgba(26, 26, 26, 1);
+  --color-white: rgba(255, 255, 255, 1);
+  --color-grey: rgba(191, 190, 190, 1);
+  --color-darkblack: rgba(5, 5, 5, 1);
+  --color-lightblack: rgba(26, 26, 26, 1);
+
+  padding: 16px;
 }
 
 a {
