--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,9 +84,8 @@ button {
 .container {
   margin: 0 auto;
   padding: 0 16px;
-  max-width: 375px;
+  /* max-width: 375px; */
   width: 100%;
-  box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
