--- a/frontend/src/components/sharedTitle/SubTitle/Subtitle.module.css
+++ b/frontend/src/components/sharedTitle/SubTitle/Subtitle.module.css
@@ -1,8 +1,6 @@
 .subtitleContainer {
-  width: 326px;
-  height: 60px;
-  position: absolute;
-  padding-bottom: 20px;
+  width: 343px;
+  height: auto;
 }
 
 .subtitle {
@@ -10,29 +8,13 @@
   font-size: 14px;
   line-height: 20px;
   letter-spacing: -0.02em;
-  text-align: center;
-  text-wrap: balance;
-  color: #ffffff;
+  color: var(--dark-gray);
+  padding-bottom: 32px;
 }
 
 @media (min-width: 768px) {
   .subtitleContainer {
-    width: 577px;
-    height: 48px;
-    padding-bottom: 40px;
-  }
-
-  .subtitle {
-    font-size: 16px;
-    line-height: 24px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .subtitleContainer {
-    width: 577px;
-    height: 48px;
-    padding-bottom: 40px;
+    width: 531px;
   }
 
   .subtitle {
