added burger btn

--- a/frontend/src/components/sections/Header/Header.module.css
+++ b/frontend/src/components/sections/Header/Header.module.css
@@ -51,6 +51,14 @@
   }
 }
 
+.logoLight {
+  fill: var(--black);
+}
+
+.logoDark {
+  fill: var(--white);
+}
+
 .buttons {
   display: flex;
   border-radius: 30px;
