--- a/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -1,25 +1,3 @@
-.container {
-  width: 100%;
-  padding: 0 16px;
-  font-family: var(--base-font);
-  color: var(--black);
-  margin: 0 auto;
-  max-width: 375px;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    padding: 0 32px;
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-  }
-}
-
 .pageIntro {
   padding: 64px 0 32px 0;
 }
@@ -34,22 +12,6 @@
 
 .active {
   color: var(--black);
-}
-
-.title {
-  font-size: 28px;
-  font-weight: 800;
-  margin: 0 0 16px;
-  line-height: 1.14;
-  text-transform: uppercase;
-}
-
-.subtitle {
-  font-size: 14px;
-  color: var(--gray);
-  font-weight: 500;
-  line-height: 1.43;
-  letter-spacing: -0.28px;
 }
 
 .photoUpload {
@@ -106,8 +68,12 @@
   padding-top: 32px;
 }
 
-.label {
+.nameLabel {
   color: var(--gray);
+}
+
+.label {
+  color: var(--black);
   font-size: 18px;
   display: block;
   font-size: 14px;
@@ -120,25 +86,21 @@
 
 .inputWrapper {
   position: relative;
-}
-
-.input {
   width: 100%;
   border-bottom: 1px solid var(--gray);
-  font-size: 14px;
-  outline: none;
-  background: transparent;
 }
 
 .textarea {
   width: 100%;
-  margin-bottom: 16px;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.43;
   letter-spacing: -0.28px;
-  position: absolute;
   resize: vertical;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--gray);
 }
 
 .charCount {
@@ -154,28 +116,17 @@
   width: 100%;
 }
 
-.selectWrapper::after {
-  content: '';
-  position: absolute;
-  right: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 5px solid #333;
-  pointer-events: none;
-}
-
 .select {
   width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  padding: 14px;
+  border: 1px solid var(--gray);
+  border-radius: 30px;
   font-size: 14px;
+  font-weight: 500;
+  line-height: 1.43;
+  letter-spacing: -0.28px;
+  color: var(--gray);
   appearance: none;
-  background-color: white;
 }
 
 .timeController {
@@ -185,23 +136,25 @@
 }
 
 .timeButton {
-  width: 36px;
-  height: 36px;
-  border: 1px solid #ccc;
+  width: 48px;
+  height: 48px;
+  border: 1px solid var(--gray);
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 18px;
-  background-color: white;
+  font-size: 14px;
   cursor: pointer;
 }
 
 .timeValue {
-  margin: 0 16px;
+  margin: 0 12px;
   font-size: 14px;
-  min-width: 60px;
   text-align: center;
+  font-weight: 500;
+  line-height: 1.43;
+  letter-spacing: -0.28px;
+  color: var(--gray);
 }
 
 .ingredientInputs {
