--- a/frontend/src/components/MobileMenu/MobileMenu.module.css
+++ b/frontend/src/components/MobileMenu/MobileMenu.module.css
@@ -2,13 +2,15 @@
   position: fixed;
   top: 0;
   right: 0;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between; */
+  justify-content: space-between;
+  gap: 32px;
   height: 100%;
   width: 100%;
   z-index: 999;
-  max-width: 375px;
+  overflow: hidden;
+  padding: 20px 20px 116px 20px;
   background-color: var(--black);
   color: var(--white);
 }
@@ -16,4 +18,36 @@
   .overlay {
     display: none;
   }
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logoWhite {
+  fill: var(--white);
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 22px;
+}
+
+.link {
+  font-family: 'Mulish', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.4;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+}
+
+.imageWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
