--- a/frontend/src/components/ui/PathInfo/PathInfo.module.css
+++ b/frontend/src/components/ui/PathInfo/PathInfo.module.css
@@ -1,11 +1,37 @@
 .wrapper {
-    font-size: 12px;
-    color: var(--gray);
-    margin-top: 16px;
+  margin: 64px 0 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    margin-bottom: 40px;
   }
-  
-  .link {
-    color: var(--gray);
-    text-decoration: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .wrapper {
+    margin-top: 80px;
   }
-  
+}
+
+.link {
+  color: var(--gray);
+  font-size: 12px;
+  font-weight: 700;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.slash {
+  color: var(--gray);
+  font-size: 12px;
+  font-weight: 700;
+  margin: 0 8px;
+}
+
+.wrap {
+  color: var(--black);
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
