--- a/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -65,11 +65,15 @@
 }
 
 .formGroup {
-  padding-top: 32px;
+  padding-top: 8px;
 }
 
-.nameLabel {
-  color: var(--gray);
+.formWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  padding-top: 32px;
 }
 
 .label {
@@ -80,8 +84,13 @@
   font-weight: 800;
   line-height: 1.33;
   letter-spacing: -0.36px;
-  margin-bottom: 32px;
+  margin-bottom: 8px;
   text-transform: uppercase;
+}
+
+.nameLabel {
+  color: var(--gray);
+  margin: 32px 0;
 }
 
 .inputWrapper {
@@ -127,34 +136,6 @@
   letter-spacing: -0.28px;
   color: var(--gray);
   appearance: none;
-}
-
-.timeController {
-  display: flex;
-  align-items: center;
-  width: fit-content;
-}
-
-.timeButton {
-  width: 48px;
-  height: 48px;
-  border: 1px solid var(--gray);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-.timeValue {
-  margin: 0 12px;
-  font-size: 14px;
-  text-align: center;
-  font-weight: 500;
-  line-height: 1.43;
-  letter-spacing: -0.28px;
-  color: var(--gray);
 }
 
 .ingredientInputs {
