--- a/frontend/src/components/SignInForm/SignInForm.module.css
+++ b/frontend/src/components/SignInForm/SignInForm.module.css
@@ -1,10 +1,11 @@
+.icon {
+  fill: var(--dark-gray);
+}
 .form {
   display: flex;
   flex-direction: column;
   gap: 24px;
   width: 100%;
-  max-width: 480px;
-  margin: 0 auto;
 }
 
 .formGroup {
@@ -18,8 +19,6 @@
   font-size: 14px;
   font-weight: 500;
   color: var(--black);
-  display: flex;
-  align-items: center;
 }
 
 .label sup {
@@ -107,38 +106,16 @@
   cursor: not-allowed;
 }
 
-/* Адаптивність для планшетів */
 @media (min-width: 768px) {
   .form {
     gap: 32px;
   }
 
-  .label {
-    font-size: 16px;
-  }
-
   .input {
     padding: 16px;
-    font-size: 16px;
-  }
-
-  .error {
-    font-size: 14px;
-  }
-
-  .formError {
-    font-size: 16px;
   }
 
   .submitButton {
     padding: 16px 0;
-    font-size: 16px;
-  }
-}
-
-/* Адаптивність для десктопів */
-@media (min-width: 1440px) {
-  .form {
-    max-width: 520px;
   }
 }
