--- a/frontend/src/components/sections/Footer/Footer.module.css
+++ b/frontend/src/components/sections/Footer/Footer.module.css
@@ -7,7 +7,7 @@
 
 .wrapper {
   width: 100%;
-  padding: 0 16px 40px;
+  padding: 0 0 40px;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
