--- a/frontend/src/components/sections/Categories/Categories.module.css
+++ b/frontend/src/components/sections/Categories/Categories.module.css
@@ -1,5 +1,17 @@
 .categoriesWrapper {
-  max-width: 1200px;
+  max-width: 343px;
   margin: 0 auto;
-  padding: 40px 20px;
+  padding: 32px 16px;
+}
+@media screen and (min-width: 768px) {
+  .categoriesWrapper {
+    max-width: 768px;
+    padding: 40px 32px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .categoriesWrapper {
+    max-width: 1440px;
+    padding: 40px 80px;
+  }
 }
