--- a/frontend/src/components/ui/MainTitle/MainTitle.module.css
+++ b/frontend/src/components/ui/MainTitle/MainTitle.module.css
@@ -4,3 +4,8 @@
   font-weight: 800;
   text-transform: uppercase;
 }
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 40px;
+  }
+}
