--- a/frontend/src/components/UserBar/UserBar.module.css
+++ b/frontend/src/components/UserBar/UserBar.module.css
@@ -5,9 +5,12 @@
 }
 
 .userBtn {
-  width: 122px;
+  min-width: 122px;
+  padding-right: 14px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  gap: 6px;
   border: none;
   border-radius: 30px;
   cursor: pointer;
@@ -17,12 +20,11 @@
 
 @media screen and (min-width: 768px) {
   .userBtn {
-    width: 148px;
+    min-width: 148px;
   }
 }
 
 .avatar {
-  margin-right: 6px;
   width: 32px;
   height: 32px;
   border-radius: 50%;
@@ -36,8 +38,15 @@
   }
 }
 
+.wrapper {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  justify-content: center;
+  gap: 4px;
+}
+
 .username {
-  margin-right: 4px;
   font-size: 12px;
   font-weight: 700;
   line-height: 1.5;
@@ -57,7 +66,7 @@
 }
 
 .dropdown {
-  width: 122px;
+  width: 100%;
   position: absolute;
   top: 100%;
   right: 0;
@@ -70,12 +79,6 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
-}
-
-@media screen and (min-width: 768px) {
-  .dropdown {
-    width: 148px;
-  }
 }
 
 .dropdownItem {
