--- a/frontend/src/components/CategoryList/CategoryList.module.css
+++ b/frontend/src/components/CategoryList/CategoryList.module.css
@@ -90,10 +90,7 @@
     grid-column: span 2;
     aspect-ratio: 2 / 1;
   }
-  .icon {
-    width: 44px;
-    height: 44px;
-  }
+
   .buttonWrap {
     bottom: 24px;
     left: 24px;
@@ -105,17 +102,10 @@
   }
 }
 
-@media screen and (min-width: 1440px) {
+/* @media screen and (min-width: 1440px) {
   .categoryListContainer {
     max-width: 1280px;
     margin: 0 auto;
-  }
-
-  .grid {
-    display: grid;
-    grid-template-columns: 325px 325px 590px;
-    grid-auto-rows: 369px;
-    gap: 20px;
   }
 
   .card {
@@ -132,33 +122,65 @@
     display: block;
   }
 
-  .desktopWide {
-    width: 100%;
-    height: 100%;
+  .grid {
+    display: grid;
+    grid-template-columns: 325px 325px 590px;
+    grid-template-rows: repeat(4, 369px);
+    gap: 20px;
+    grid-template-areas:
+      'a b c'
+      'd e f'
+      'g h i'
+      'j k l';
+  }
+  .grid > .card:nth-child(1) {
+    grid-area: a;
+    width: 325px;
+  }
+
+  .grid > .card:nth-child(2) {
+    grid-area: b;
+    width: 325px;
   }
 
   .grid > .card:nth-child(3) {
-    grid-column: 3;
-    grid-row: 1;
+    grid-area: c;
+    width: 590px;
   }
 
   .grid > .card:nth-child(4) {
-    grid-column: 1 / span 2;
-    grid-row: 2;
+    grid-area: d;
+    width: 590px;
+  }
+
+  .grid > .card:nth-child(5) {
+    grid-area: e;
+    width: 325px;
+  }
+
+  .grid > .card:nth-child(6) {
+    grid-area: f;
+    width: 325px;
+  }
+
+  .grid > .card:nth-child(7) {
+    grid-area: g;
+    width: 325px;
   }
 
   .grid > .card:nth-child(8) {
-    grid-column: 2;
-    grid-row: 3;
+    grid-area: h;
+    width: 590px;
+  }
+
+  .grid > .card:nth-child(9) {
+    grid-area: i;
+    width: 325px;
   }
 
   .grid > .card:nth-child(10) {
-    grid-column: 1 / span 2;
-    grid-row: 4;
-  }
-  .icon {
-    width: 44px;
-    height: 44px;
+    grid-area: j;
+    width: 590px;
   }
 
   .buttonWrap {
@@ -170,5 +192,130 @@
   .allCategories {
     font-size: 20px;
     border-radius: 30px;
+    width: 325px;
+    height: 369px;
+  }
+} */
+
+@media screen and (min-width: 1440px) {
+  .categoryListContainer {
+    width: 1280px;
+    margin: 0 auto;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 325px 325px 590px;
+    grid-template-rows: repeat(4, 369px);
+    gap: 20px;
+  }
+
+  .card {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+  }
+
+  .image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+  /* Маленькі картки */
+  .grid > .card:nth-child(1),
+  .grid > .card:nth-child(2),
+  .grid > .card:nth-child(5),
+  .grid > .card:nth-child(6),
+  .grid > .card:nth-child(7),
+  .grid > .card:nth-child(9),
+  .grid > .card:nth-child(11),
+  .grid > .card:nth-child(12) {
+    width: 325px;
+    height: 369px;
+  }
+
+  /* Великі картки */
+  .grid > .card:nth-child(3),
+  .grid > .card:nth-child(4),
+  .grid > .card:nth-child(8),
+  .grid > .card:nth-child(10) {
+    width: 590px;
+    height: 369px;
+  }
+
+  /* Розміщення по сітці */
+  .grid > .card:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .grid > .card:nth-child(2) {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .grid > .card:nth-child(3) {
+    grid-column: 3;
+    grid-row: 1;
+  }
+
+  .grid > .card:nth-child(4) {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .grid > .card:nth-child(5) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .grid > .card:nth-child(6) {
+    grid-column: 3;
+    grid-row: 2;
+  }
+
+  .grid > .card:nth-child(7) {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .grid > .card:nth-child(8) {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  .grid > .card:nth-child(9) {
+    grid-column: 3;
+    grid-row: 3;
+  }
+
+  .grid > .card:nth-child(10) {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .grid > .card:nth-child(11) {
+    grid-column: 2;
+    grid-row: 4;
+  }
+
+  .grid > .card:nth-child(12) {
+    grid-column: 3;
+    grid-row: 4;
+  }
+
+  .buttonWrap {
+    bottom: 24px;
+    left: 24px;
+    gap: 4px;
+  }
+
+  .allCategories {
+    font-size: 20px;
+    border-radius: 30px;
+    width: 325px;
+    height: 369px;
   }
 }
