--- a/frontend/src/components/sections/Hero/Hero.module.css
+++ b/frontend/src/components/sections/Hero/Hero.module.css
@@ -2,7 +2,6 @@
   background-color: var(--black);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  max-width: 375px;
   margin: 0 auto;
   padding: 20px;
   position: relative;
@@ -33,7 +32,7 @@
 
 .subtitle {
   color: var(--white);
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: -0.02px;
