--- a/frontend/src/components/ui/SubTitle/SubTitle.module.css
+++ b/frontend/src/components/ui/SubTitle/SubTitle.module.css
@@ -2,14 +2,14 @@
   color: var(--gray);
   font-size: 14px;
   font-weight: 500;
-  margin: 16px 0 32px;
+  /* margin: 16px 0 32px; */
   width: 100%;
 }
 
 @media screen and (min-width: 768px) {
   .subtitle {
     font-size: 16px;
-    margin: 20px 0 40px;
+    /* margin: 20px 0 40px; */
     width: 443px;
   }
 }
