--- a/frontend/src/components/SignUpModal/SignUpModal.module.css
+++ b/frontend/src/components/SignUpModal/SignUpModal.module.css
@@ -7,19 +7,22 @@
 }
 
 .title {
-  font-family: 'Mulish', sans-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: var(--black);
-  margin-bottom: 24px;
+  color: #050505;
   text-align: center;
+  font-family: Mulish;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 32px; /* 114.286% */
+  letter-spacing: -0.56px;
+  text-transform: uppercase;
 }
 
 .switchText {
   font-family: 'Mulish', sans-serif;
   font-size: 14px;
   color: var(--dark-gray);
-  margin-top: 24px;
+  padding-top: 16px;
   text-align: center;
 }
 
@@ -34,14 +37,10 @@
   transition: color 0.3s;
 }
 
-.switchButton:hover {
-  color: var(--red);
-}
-
 @media (min-width: 768px) {
-  .container {
+  /* .container {
     padding: 24px;
-  }
+  } */
 
   .title {
     font-size: 28px;
