--- a/frontend/src/components/sections/Footer/Footer.module.css
+++ b/frontend/src/components/sections/Footer/Footer.module.css
@@ -7,7 +7,7 @@
 
 .wrapper {
   width: 100%;
-  padding: 0 0 40px;
+  padding: 0 16px 40px;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
@@ -30,6 +30,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 40px;
+  padding-bottom: 17px;
 
   font-size: 14px;
   font-weight: 500;
@@ -41,6 +42,12 @@
 }
 
 @media (min-width: 768px) {
+  .footer {
+    max-width: 768px;
+  }
+  .wrapper {
+    padding: 0 32px 40px;
+  }
   .copyright {
     font-size: 16px;
     line-height: 24px;
@@ -48,4 +55,10 @@
   }
 }
 @media (min-width: 1440px) {
+  .footer {
+    max-width: 1440px;
+  }
+  .wrapper {
+    padding: 0 80px 40px;
+  }
 }
