fix: recipicard buttons heart and arrow

--- a/frontend/src/components/ui/RecipeCard/RecipeCard.module.css
+++ b/frontend/src/components/ui/RecipeCard/RecipeCard.module.css
@@ -151,17 +151,22 @@
 }
 
 .heart.active svg {
+  fill: none;
   stroke: var(--white);
 }
+.heart:hover{
+  background-color: var(--black);
+  border-color: var(--black);
 
+}
 .arrow:hover {
   background-color: var(--black);
   border-color: var(--black);
 }
-
+.heart:hover svg,
 .arrow:hover svg {
   stroke: var(--white);
-}
+} 
 
 @media (min-width: 1440px) {
   .icon {
