add: Recipe Filters component

--- a/frontend/src/components/ui/DropdownSelector/DropdownSelector.module.css
+++ b/frontend/src/components/ui/DropdownSelector/DropdownSelector.module.css
@@ -15,7 +15,7 @@
 
 .select {
   width: 100%;
-  width: 343px;
+  max-width: 343px;
   padding: 14px;
   border: 1px solid var(--gray);
   border-radius: 30px;
