--- a/frontend/src/components/RecipeMainInfo/RecipeMainInfo.module.css
+++ b/frontend/src/components/RecipeMainInfo/RecipeMainInfo.module.css
@@ -1,10 +1,11 @@
 .recipeMainInfo {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-bottom: 40px;
+  
+  }
+.wrap{
+  padding: 0;
 }
-
 
 .image {
   width: 100%;
@@ -94,8 +95,9 @@
     flex-direction: row;
     align-items: flex-start;
     text-align: left;
-    gap: 32px;
-    margin-bottom: 32px;
+    padding: 0;
+
+    margin-bottom: 40px;
   }
 
   .info {
