--- a/frontend/src/components/PopularRecipes/PopularRecipes.module.css
+++ b/frontend/src/components/PopularRecipes/PopularRecipes.module.css
@@ -23,3 +23,22 @@
     gap: 24px;
   }
 }
+/* .container {
+  margin: 0 auto;
+  padding: 0 16px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0 32px;
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding: 0 80px;
+  }
+} */
