--- a/frontend/src/components/RecipeMainInfo/RecipeMainInfo.module.css
+++ b/frontend/src/components/RecipeMainInfo/RecipeMainInfo.module.css
@@ -1,69 +1,64 @@
-.recipeMainInfo {
+/* .wrap {
   display: flex;
   flex-direction: column;
-  
-  }
-.wrap{
   padding: 0;
+} */
+.recipeMainInfo {
+  padding-top: 0;
+  margin-bottom: 32px;
 }
 
 .image {
-  width: 100%;
-  max-width: 400px;
+  /* width: 100%;
+  max-width: 400px; */
   border-radius: 16px;
   object-fit: cover;
 }
 
-.info {
-  width: 100%;
-  max-width: 400px;
-  text-align: center;
-}
-
 .title {
-  font-size: 1.75rem; /* ≈28px, mobile-friendly */
-  font-weight: 700;
-  margin-bottom: 12px;
+  font-size: 18px;
+  font-weight: 800;
+  margin-bottom: 20px;
   color: var(--black);
+  line-height: 1.33333;
+  letter-spacing: -0.36px;
+  text-transform: uppercase;
 }
 
 .category {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
-  justify-content: center;
-  margin-bottom: 16px;
-
-
+  gap: 18px;
+  margin-bottom: 20px;
 }
 
 .category span {
-  padding: 4px 10px;
-  font-size: 0.875rem; /* ≈14px */
+  padding: 10px 10px;
+  font-size: 14px;
   color: var(--gray);
-  /* background: var(--light-gray); */
   border: 1px solid var(--gray);
   border-radius: 20px;
 }
 
 .description {
-  font-size: var(--base-font-size); /* 16px */
-  line-height: var(--line-height, 1.5);
-  color: var(--dark-gray);
-  margin-bottom: 16px;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--gray);
+  margin-bottom: 20px;
+  line-height: 1.42857; 
+letter-spacing: -0.28px;
 }
 
 .authorBlock {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 10px;
+  gap: 16px;
 }
 
 .authorImage {
   width: 36px;
   height: 36px;
-  border-radius: 50%;
+  border-radius: 30px;
   object-fit: cover;
 }
 
@@ -74,22 +69,27 @@
 }
 
 .authorLabel {
-  font-size: 0.75rem; /* ≈12px */
+  font-size: 12px;
   color: var(--gray);
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: -0.24px;
 }
 
 .authorName {
-  font-size: 0.875rem; /* ≈14px */
-  font-weight: 600;
-  color: var(--black);
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--gray);
   cursor: pointer;
+  line-height: 1.42857;
+  letter-spacing: -0.28px;
+
 }
 
 .authorName:hover {
   text-decoration: underline;
 }
 
-/* Tablet ≥ 768px */
 @media (min-width: 768px) {
   .recipeMainInfo {
     flex-direction: row;
@@ -131,10 +131,9 @@
   }
 }
 
-/* Desktop ≥ 1440px */
 @media (min-width: 1440px) {
   .title {
-    font-size: 2.25rem; /* ≈36px */
+    font-size: 2.25rem;
   }
 
   .category span {
@@ -143,15 +142,15 @@
   }
 
   .description {
-    font-size: 1.125rem; /* ≈18px */
-  }
-
-  .authorImage {
-    width: 48px;
-    height: 48px;
-  }
-
-  .authorName {
     font-size: 1.125rem;
+
+    .authorImage {
+      width: 48px;
+      height: 48px;
+    }
+
+    .authorName {
+      font-size: 1.125rem;
+    }
   }
 }
